# VecNote

./: pyproject.toml
src/VecNote/: __main__.py  config.py  note.py
src/VecNote/cli/: main.py  note.py
